--- a/contact.html
+++ b/contact.html
@@ -258,10 +258,10 @@
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
           <ul class="list-unstyled">
-            <li class="mb-2">23621 15 Mile Rd #C104, Clinton MI, 48035, New York, USA</li>
+            <li class="mb-2">17 Mile Rd #C104, Clinton MI, 48035, London, UK</li>
             <li class="mb-2">+1 (2) 345 6789</li>
             <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">contact@yourdomain.com</li>
+            <li class="mb-2">contact@ahmedbenabdallah.me</li>
           </ul>
         </div>
         <!-- company -->
@@ -317,7 +317,7 @@
               var CurrentYear = new Date().getFullYear()
               document.write(CurrentYear)
             </script> 
-            © Powered By <a href="#">ahmed</a></p> . All Rights Reserved.
+            © Powered By <a href="mailto:ahmedbenabdallah@protonmail.com">ahmed</a></p> . All Rights Reserved.
         </div>
         <div class="col-sm-5 text-sm-right text-center">
          <ul class="list-inline">
