--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row no-gutters">
         <div class="col-lg-4 text-center text-lg-left">
-          <a class="text-color mr-3" href="callto:+443003030266"><strong>CALL</strong> +44 300 303 0266</a>
+          <a class="text-color mr-3" href="callto:+443003030266"><strong>CALL</strong> +1 234 567 89</a>
           <ul class="list-inline d-inline">
             <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="#"><i class="ti-facebook"></i></a></li>
             <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="#"><i class="ti-twitter-alt"></i></a></li>
@@ -308,7 +308,7 @@
       <img class="card-img-top rounded-0" src="images/courses/course-1.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
-          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
+          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>01-23-2017</li>
           <li class="list-inline-item"><a class="text-color" href="#">Humanities</a></li>
         </ul>
         <a href="course-single.html">
@@ -326,7 +326,7 @@
       <img class="card-img-top rounded-0" src="images/courses/course-2.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
-          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
+          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>04-18-2018</li>
           <li class="list-inline-item"><a class="text-color" href="#">Humanities</a></li>
         </ul>
         <a href="course-single.html">
@@ -344,7 +344,7 @@
       <img class="card-img-top rounded-0" src="images/courses/course-3.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
-          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
+          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>04-17-2018</li>
           <li class="list-inline-item"><a class="text-color" href="#">Humanities</a></li>
         </ul>
         <a href="course-single.html">
@@ -380,7 +380,7 @@
       <img class="card-img-top rounded-0" src="images/courses/course-5.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
-          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
+          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>12-19-2018</li>
           <li class="list-inline-item"><a class="text-color" href="#">Humanities</a></li>
         </ul>
         <a href="course-single.html">
@@ -398,7 +398,7 @@
       <img class="card-img-top rounded-0" src="images/courses/course-6.jpg" alt="course thumb">
       <div class="card-body">
         <ul class="list-inline mb-2">
-          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>02-14-2018</li>
+          <li class="list-inline-item"><i class="ti-calendar mr-1 text-color"></i>08-19-2018</li>
           <li class="list-inline-item"><a class="text-color" href="#">Humanities</a></li>
         </ul>
         <a href="course-single.html">
@@ -610,7 +610,7 @@
           <!-- post date -->
           <li class="list-inline-item mr-3 ml-0">August 28, 2019</li>
           <!-- author -->
-          <li class="list-inline-item mr-3 ml-0">By Jonathon</li>
+          <li class="list-inline-item mr-3 ml-0">By Ahmed</li>
         </ul>
         <a href="blog-single.html">
           <h4 class="card-title">The Expenses You Are Thinking.</h4>
@@ -691,10 +691,10 @@
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
           <ul class="list-unstyled">
-            <li class="mb-2">23621 15 Mile Rd #C104, Clinton MI, 48035, New York, USA</li>
+            <li class="mb-2">17 Mile Rd #C104, Clinton MI, 48035, London, UK</li>
             <li class="mb-2">+1 (2) 345 6789</li>
             <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">contact@yourdomain.com</li>
+            <li class="mb-2">contact@ahmedbenabdallah.me</li>
           </ul>
         </div>
         <!-- company -->
@@ -750,7 +750,7 @@
               var CurrentYear = new Date().getFullYear()
               document.write(CurrentYear)
             </script> 
-            © Powered By <a href="#">ahmed</a></p> . All Rights Reserved.
+            © Powered By <a href="mailto:ahmedbenabdallah@protonmail.com">Ahmed</a></p> . All Rights Reserved.
         </div>
         <div class="col-sm-5 text-sm-right text-center">
           <ul class="list-inline">
