--- a/notice.html
+++ b/notice.html
@@ -320,7 +320,7 @@
       </div>
     </div>
   </div>
-  <!-- copyright -->
+ <!-- copyright -->
   <div class="copyright py-4 bg-footer">
     <div class="container">
       <div class="row">
@@ -330,10 +330,10 @@
               var CurrentYear = new Date().getFullYear()
               document.write(CurrentYear)
             </script> 
-            © Powered By <a href="#">ahmed</a></p> . All Rights Reserved.
+            © Powered By <a href="mailto:ahmedbenabdallah@protonmail.com">ahmed</a></p> . All Rights Reserved.
         </div>
         <div class="col-sm-5 text-sm-right text-center">
-          <ul class="list-inline">
+         <ul class="list-inline">
             <li class="list-inline-item"><a class="d-inline-block p-2" href="#"><i class="ti-facebook text-primary"></i></a></li>
             <li class="list-inline-item"><a class="d-inline-block p-2" href="#"><i class="ti-twitter-alt text-primary"></i></a></li>
             <li class="list-inline-item"><a class="d-inline-block p-2" href="#"><i class="ti-instagram text-primary"></i></a></li>
